Fix chart bug where it would fit out of the box

--- a/css/styles.css
+++ b/css/styles.css
@@ -277,10 +277,11 @@ textarea, input {
 }
 
 #statistics {
-  height: 80%;
+  height: 70%;
+  width: 90%;
   /*min-width: 200px;*/
   margin: 0 auto;
-  padding-top: 3px;
+  padding: 3px;
 }
 
 .canvasjs-chart-credit {
